--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarjetas Gráficas Serie 4000</title>
+    <title>4000 Series Graphics Cards</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header id="header" class="show-header">
         <div id="header1">
-            <img src="./logo.jpg" alt="Tarjeta de video" id="header-img">
+            <img src="./images/logo.jpg" alt="Video card" id="header-img">
         </div>
         <div id="header2">
             <nav id="nav-bar">
-                <a href="#contact" class="nav-link">Contacto</a>
-                <a href="#features" class="nav-link">Características</a>
-                <a href="#products" class="nav-link">Productos</a>
+                <a href="#contact" class="nav-link">Contact</a>
+                <a href="#features" class="nav-link">Characteristics</a>
+                <a href="#products" class="nav-link">Products</a>
             </nav>
         </div>
         </header>
@@ -30,26 +30,26 @@
             </section>
 
             <section id="features">
-                <h2>Características Destacadas de la Serie 4000</h2>
+                <h2>4000 Series Highlights</h2>
                 <div class="feature">
                   <img src="./images/Arquitectura-ada-lovelace.jpeg" alt="Arquitectura Ada Lovelace">
                   <div class="feature-text">
-                    <h3>Arquitectura Ada Lovelace</h3>
-                    <p>Experimenta un salto cuántico en rendimiento con la arquitectura NVIDIA Ada Lovelace. Disfruta de juegos más fluidos y realistas, y crea contenido de alta calidad.</p>
+                    <h3>Ada Lovelace Architecture</h3>
+                    <p>Experience a quantum leap in performance with NVIDIA Ada Lovelace architecture. Enjoy smoother, more realistic gaming and create high-quality content.</p>
                   </div>
                 </div>
                 <div class="feature">
                   <img src="./images/Ray-tracing.jpg" alt="Ray Tracing en tiempo real">
                   <div class="feature-text">
-                    <h3>Ray Tracing en Tiempo Real</h3>
-                    <p>Sumérgete en mundos virtuales increíblemente realistas gracias al ray tracing de tercera generación. Disfruta de sombras, reflejos y refracciones con un nivel de detalle sin precedentes.</p>
+                    <h3>Real-Time Ray Tracing</h3>
+                    <p>Immerse yourself in incredibly realistic virtual worlds thanks to third-generation ray tracing. Experience shadows, reflections and refractions with an unprecedented level of detail.</p>
                   </div>
                 </div>
                 <div class="feature">
                   <img src="./images/Dlss-3.webp" alt="DLSS 3">
                   <div class="feature-text">
                     <h3>DLSS 3</h3>
-                    <p>Aumenta el rendimiento de tus juegos sin sacrificar la calidad visual con DLSS 3. Disfruta de altas tasas de fotogramas y resoluciones sin necesidad de una configuración de hardware extrema.</p>
+                    <p>Boost your gaming performance without sacrificing visual quality with DLSS 3. Enjoy high frame rates and resolutions without the need for extreme hardware configurations.</p>
                   </div>
                 </div>
               </section>
@@ -62,25 +62,30 @@
                 <div class="product">
                     <h3>RTX 4070 SUPER</h3>
                     <h4 class="price">680$</h4>
-                    <p>La tarjeta gráfica perfecta para gamers y creadores.</p>
-                    <button>Comprar</button>
+                    <p>The perfect graphics card for gamers and creators.</p>
+                    <button>Select</button>
                 </div>
                 <div class="product">
                     <h3>RTX 4080 SUPER</h3>
                     <h4 class="price">1249$</h4>
-                    <p>Experimenta un rendimiento gráfico de siguiente generación.</p>
-                    <button>Comprar</button>
+                    <p>Experience next-generation graphics performance.</p>
+                    <button>Select</button>
                 </div>
                 <div class="product">
                     <h3>RTX 4090</h3>
                     <h4 class="price">1599$</h4>
-                    <p>La tarjeta gráfica más potente del mercado.</p>
-                    <button>Comprar</button>
+                    <p>The most powerful graphics card on the market.</p>
+                    <button>Select</button>
                 </div>
             </section>
 
             <footer>
-                <p>&copy; 2023 Tu Tienda de Tarjetas Gráficas</p>
+                <ul>
+                    <li>Privacy</li>
+                    <li>Terms</li>
+                    <li>Contact</li>
+                </ul>
+                <p>&copy; Copyright 2024, Tu Tienda de Tarjetas Gráficas</p>
             </footer>
         </div>
     </div>
