--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
         <section id="products">
                 <div class="product">
-                    <h3>RTX 4070 SUPER</h3>
+                    <h3>RTX 4070</h3>
                     <h4 class="price">680$</h4>
                     <p>The perfect graphics card for gamers and creators.</p>
                     <button>Select</button>
                 </div>
                 <div class="product">
-                    <h3>RTX 4080 SUPER</h3>
+                    <h3>RTX 4080</h3>
                     <h4 class="price">1249$</h4>
                     <p>Experience next-generation graphics performance.</p>
                     <button>Select</button>
