--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
                   <img src="./images/Arquitectura-ada-lovelace.jpeg" alt="Arquitectura Ada Lovelace">
                   <div class="feature-text">
                     <h3>Ada Lovelace Architecture</h3>
-                    <p>Experience a quantum leap in performance with NVIDIA Ada Lovelace architecture. Enjoy smoother, more realistic gaming and create high-quality content.</p>
+                    <p class="paragraph">Experience a quantum leap in performance with NVIDIA Ada Lovelace architecture. Enjoy smoother, more realistic gaming and create high-quality content.</p>
                   </div>
                 </div>
                 <div class="feature">
                   <img src="./images/Ray-tracing.jpg" alt="Ray Tracing en tiempo real">
                   <div class="feature-text">
                     <h3>Real-Time Ray Tracing</h3>
-                    <p>Immerse yourself in incredibly realistic virtual worlds thanks to third-generation ray tracing. Experience shadows, reflections and refractions with an unprecedented level of detail.</p>
+                    <p class="paragraph">Immerse yourself in incredibly realistic virtual worlds thanks to third-generation ray tracing. Experience shadows, reflections and refractions with an unprecedented level of detail.</p>
                   </div>
                 </div>
                 <div class="feature">
                   <img src="./images/Dlss-3.webp" alt="DLSS 3">
                   <div class="feature-text">
                     <h3>DLSS 3</h3>
-                    <p>Boost your gaming performance without sacrificing visual quality with DLSS 3. Enjoy high frame rates and resolutions without the need for extreme hardware configurations.</p>
+                    <p class="paragraph">Boost your gaming performance without sacrificing visual quality with DLSS 3. Enjoy high frame rates and resolutions without the need for extreme hardware configurations.</p>
                   </div>
                 </div>
               </section>
