--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                         </div>
                     </div>
                 </div>
-              </section>
+            </section>
 
-            <section id="features">
+            <section id="features" class="youtube">
                 <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/fj245xMr-BM?si=4UFb7Y-KrsbwRYYm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen><video id="video" src="demo.mp4"></video></iframe>
             </section>
 
