--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <li>Terms</li>
                     <li>Contact</li>
                 </ul>
-                <p>&copy; Copyright 2024, Tu Tienda de Tarjetas Gráficas</p>
+                <p>&copy; Copyright 2024, Your Graphic Cards Store</p>
             </footer>
         </div>
     </div>
